# property_analysis

./: .gitignore  CLAUDE.md  README.md  docker-compose.yml  start.sh
.claude/: settings.local.json
.github/hooks/: pre-push
.github/workflows/: ci.yml
.serena/: project.yml
.superpowers/brainstorm/92983-1774829761/: .server-info  dashboard-mockup.html  visual-direction.html
backend/: Dockerfile  README.md  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0ba6456e1927_initial_schema.py  2df4a8530b18_add_branding_to_settings.py  39a8888931b2_initial_schema.py  54f3c5c1bb6d_add_rental_delay_months.py  719883dd7ef3_initial_tables.py  8f5d28252674_add_monthly_revenue_profile.py  a1b2c3d4e5f6_add_ltr_support.py  a1b2c3d4e5f6_add_tier2_fields.py  a7b8c9d0e1f2_add_image_url_to_properties.py  b2c3d4e5f6a7_add_growth_rate_fields.py  b2c3d4e5f6g7_add_scraped_snapshot.py  be542e0a5a22_add_on_delete_cascade_to_foreign_keys.py  c3d4e5f6a7b8_add_seasonal_occupancy_fields.py  c3d4e5f6g7h8_add_exit_assumptions.py  ccde7f0b427b_add_cached_metric_columns_to_properties.py  d4e5f6a7b8c9_add_marginal_tax_rate.py  e5f6a7b8c9d0_add_io_period_and_tax_rate.py  f6a7b8c9d0e1_add_professional_expense_fields.py
backend/app/: config.py  database.py  main.py
backend/app/models/: __init__.py  assumptions.py  ltr_assumptions.py  property.py  scenario.py  settings.py  snapshot.py
backend/app/routers/: assumptions.py  compute.py  export.py  ltr_assumptions.py  properties.py  quick_test.py  scenarios.py  settings.py  snapshots.py
backend/app/schemas/: assumptions.py  ltr_assumptions.py  property.py  results.py  scenario.py  settings.py  snapshot.py
backend/app/services/: analysis.py  snapshot.py
backend/app/services/computation/: depreciation.py  expenses.py  irr.py  ltr_expenses.py  ltr_revenue.py  metrics.py  monthly.py  mortgage.py  profile_templates.py  projections.py  quick_test.py  revenue.py  sensitivity.py  tornado.py
backend/app/services/pdf/: builder.py  charts.py  generator.py
backend/app/services/scraper/: models.py  redfin.py
backend/data/: str_calc.db
backend/tests/: conftest.py  test_api_assumptions.py  test_api_compute.py  test_api_properties.py  test_api_scenarios.py  test_api_scrape.py  test_api_snapshots.py  test_cached_metrics.py  test_depreciation.py  test_expenses.py  test_irr.py  test_metrics.py  test_monthly.py  test_monthly_profile.py  test_mortgage.py  test_pdf_export.py  test_projections.py  test_quick_test.py  test_revenue.py  test_scraper.py  test_sensitivity.py  test_snapshot_service.py  test_tornado.py  test_validation.py
design_handoff_modernization/: Font & Chart Proposals.html  Modernized STR Calculator.html  PROGRESS.md  README.md  SESSION_PROMPTS.md
design_handoff_modernization/brand/: Brand Exploration.html
docs/: financial-accuracy-review.md
docs/superpowers/plans/: 2026-03-29-redfin-scraper.md  (+6 more)
frontend/: Dockerfile  README.md  index.html  nginx.conf  package-lock.json  package.json  vite.config.ts  vitest.config.ts
frontend/src/: App.tsx  index.css  main.tsx
(+71 files in other folders)
