[project]
name = "str-calculator-backend"
version = "0.1.0"
description = "STR Profitability Calculator Backend"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "sqlalchemy>=2.0.0",
    "alembic>=1.14.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "aiosqlite>=0.21.0",
    "httpx>=0.28.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.25.0",
    "httpx>=0.28.0",
    "mypy>=1.15.0",
]
lint = [
    "ruff>=0.11.0",
]

[tool.pdm]
distribution = false

[tool.pdm.scripts]
_format = "ruff format ."
_lint_fix = "ruff check . --fix"
_check_format = "ruff format --check ."
_check_lint = "ruff check ."
_mypy = "mypy --show-traceback ."
format = { composite = ["_format", "_lint_fix"] }
format_mypy = { composite = ["format", "_mypy"], keep_going = true }
check = { composite = ["_check_format", "_check_lint"], keep_going = true }
fix_and_check = { composite = ["format_mypy", "check"], keep_going = true }

[tool.ruff.lint]
ignore = ["E712"]

[tool.ruff.lint.per-file-ignores]
"app/models/*.py" = ["F821"]
"app/main.py" = ["E402"]
"app/services/analysis.py" = ["E402"]

[tool.mypy]
check_untyped_defs = true
warn_unreachable = true
strict_equality = true
no_implicit_optional = true
exclude = ["alembic/"]

[[tool.mypy.overrides]]
module = ["aiosqlite.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
