[project]
name = "str-calculator-backend"
version = "0.1.0"
description = "STR Profitability Calculator Backend"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "sqlalchemy>=2.0.0",
    "alembic>=1.14.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "aiosqlite>=0.21.0",
    "httpx>=0.28.0",
    "fpdf2>=2.8.0",
    "matplotlib>=3.9.0",
    "python-multipart>=0.0.18",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.25.0",
    "httpx>=0.28.0",
    "ruff>=0.11.0",
    "ty",
]

[tool.ruff.lint]
ignore = []

[tool.ruff.lint.per-file-ignores]
"app/routers/*.py" = ["E712"]
"app/services/pdf/*.py" = ["E712"]
"app/main.py" = ["E402"]

[tool.ty.src]
exclude = ["alembic/"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
